[gd_scene load_steps=20 format=3 uid="uid://bcewbhp02v7fp"]

[ext_resource type="Script" path="res://Scenes/Levels/Apartment/fifth_floor_hallway.gd" id="1_a7w8l"]
[ext_resource type="PackedScene" uid="uid://crljx7vlnijt0" path="res://Scenes/Levels/Apartment/Base/top_hallway.tscn" id="2_pjsoj"]
[ext_resource type="PackedScene" uid="uid://ch8jsclq6p2mb" path="res://Scenes/Levels/Apartment/Components/area_door.tscn" id="3_n4r8e"]
[ext_resource type="PackedScene" uid="uid://y7emk8leigvp" path="res://Scenes/Levels/Apartment/Components/door.tscn" id="4_d1jrn"]
[ext_resource type="PackedScene" uid="uid://bdirsb7f7858b" path="res://Scenes/Levels/Apartment/Text/manager.tscn" id="5_hd2w6"]
[ext_resource type="PackedScene" uid="uid://cfhn3somyqsqr" path="res://Scenes/Levels/Apartment/Text/apartment_number.tscn" id="6_nvcim"]
[ext_resource type="PackedScene" uid="uid://j7ahjtwls0ra" path="res://Scenes/Levels/Apartment/Text/floor.tscn" id="7_7efsb"]
[ext_resource type="PackedScene" uid="uid://ckxhixn86vdbv" path="res://Scenes/Levels/Apartment/Text/door_floor.tscn" id="8_33vid"]
[ext_resource type="PackedScene" uid="uid://dmi4cok8u07t2" path="res://Scenes/Levels/Apartment/Text/door_floor_roof.tscn" id="9_phg3g"]
[ext_resource type="TileSet" uid="uid://dkq0x8vybft0f" path="res://Resources/TileSets/apartment.tres" id="10_52dbt"]
[ext_resource type="PackedScene" uid="uid://da8qwlgkjyv1p" path="res://Scenes/Levels/Apartment/Text/fire_exit.tscn" id="10_smekx"]
[ext_resource type="PackedScene" uid="uid://6o0hcae1bhpk" path="res://Scenes/Levels/Apartment/Text/service.tscn" id="11_uq5yh"]
[ext_resource type="PackedScene" uid="uid://lje1niltkiiy" path="res://Scenes/Levels/Apartment/Components/window.tscn" id="13_pbjrs"]
[ext_resource type="PackedScene" uid="uid://dp3hl12a2kdqn" path="res://Scenes/Units/spider_drop.tscn" id="14_cilab"]
[ext_resource type="PackedScene" uid="uid://d5ietokrqotw" path="res://Scenes/Levels/Apartment/Components/painting_3.tscn" id="15_vac8k"]
[ext_resource type="PackedScene" uid="uid://8wvt3doawl41" path="res://Scenes/Units/rrat_hole.tscn" id="16_8w4y6"]
[ext_resource type="PackedScene" uid="uid://cj0kt44nnep5p" path="res://Scenes/Units/ghost_path.tscn" id="17_ymy65"]
[ext_resource type="PackedScene" uid="uid://b7t7ip3j04ekr" path="res://Scenes/Units/glass_single.tscn" id="18_05ipa"]
[ext_resource type="PackedScene" uid="uid://dppf1m8t67umv" path="res://Scenes/Units/glass.tscn" id="18_crul4"]

[node name="FifthFloorHallway" type="Node2D"]
script = ExtResource("1_a7w8l")

[node name="TopHallway" parent="." instance=ExtResource("2_pjsoj")]

[node name="Apt51Door" parent="." instance=ExtResource("3_n4r8e")]
position = Vector2(752, -16)

[node name="Apt52Door" parent="." instance=ExtResource("3_n4r8e")]
position = Vector2(192, -16)
lock_name = "room_52"

[node name="DoorRoofArea" parent="." instance=ExtResource("4_d1jrn")]
position = Vector2(112, -16)
door_type = "Fire"
lock_name = "building_roof_area"

[node name="AreaDoorMaintenanceRoom" parent="." instance=ExtResource("3_n4r8e")]
position = Vector2(112, -112)
door_type = "Fire"

[node name="Manager" parent="." instance=ExtResource("5_hd2w6")]
position = Vector2(176, -69)

[node name="ApartmentNumber51" parent="." instance=ExtResource("6_nvcim")]
position = Vector2(789, -48)
floor_number = 5

[node name="ApartmentNumber52" parent="." instance=ExtResource("6_nvcim")]
position = Vector2(229, -48)
floor_number = 5
apartment_number = 2

[node name="Door" parent="." instance=ExtResource("4_d1jrn")]
position = Vector2(1136, -16)
door_type = "Fire"

[node name="Floor" parent="." instance=ExtResource("7_7efsb")]
position = Vector2(1304, -52)
floor_number = 5

[node name="AreaDoorFloorUp" parent="." instance=ExtResource("3_n4r8e")]
position = Vector2(1200, -16)
door_type = "Fire"

[node name="AreaDoorFloorDown" parent="." instance=ExtResource("3_n4r8e")]
position = Vector2(1488, -16)
door_type = "Fire"

[node name="DoorFloorDown" parent="." instance=ExtResource("8_33vid")]
position = Vector2(1488, -68)
floor_number = 4
direction = "Down"

[node name="DoorFloorRoof" parent="." instance=ExtResource("9_phg3g")]
position = Vector2(1200, -68)

[node name="FireExit" parent="." instance=ExtResource("10_smekx")]
position = Vector2(32, -64)

[node name="Service" parent="." instance=ExtResource("11_uq5yh")]
position = Vector2(464, -70)

[node name="Ladder" type="TileMap" parent="."]
tile_set = ExtResource("10_52dbt")
format = 2
layer_0/tile_data = PackedInt32Array(-327678, 262144, 11, -262142, 262144, 11, -327677, 327680, 11, -262141, 327680, 11, -458750, 262144, 11, -393214, 262144, 11, -458749, 327680, 11, -393213, 327680, 11, -589822, 262144, 11, -524286, 262144, 11, -589821, 327680, 11, -524285, 327680, 11, -720894, 262144, 11, -655358, 262144, 11, -720893, 327680, 11, -655357, 327680, 11, -786430, 458752, 23, -786429, 524288, 23, -196606, 262144, 11, -196605, 327680, 11, -131069, 327680, 11, -131070, 262144, 11)

[node name="Door2" parent="." instance=ExtResource("4_d1jrn")]
position = Vector2(256, -16)

[node name="AreaDoorServiceShaft" parent="." instance=ExtResource("3_n4r8e")]
position = Vector2(480, -16)
lock_name = "service_door_5"

[node name="WindowFireEscape" parent="." instance=ExtResource("13_pbjrs")]
position = Vector2(0, -16)

[node name="SpiderDrop" parent="." instance=ExtResource("14_cilab")]
position = Vector2(86, -176)

[node name="Painting4" parent="." instance=ExtResource("15_vac8k")]
position = Vector2(590, -16)

[node name="Decals" type="TileMap" parent="."]
tile_set = ExtResource("10_52dbt")
format = 2
layer_0/tile_data = PackedInt32Array(-524278, 458752, 2, -589814, 458752, 2, -786431, 720896, 11, -393189, 851968, 10, -393188, 917504, 10, -393207, 1441792, 9, -393206, 1507328, 9, -131052, 851968, 14, -131051, 917504, 14, -131049, 851968, 14, -131048, 917504, 14, -131046, 851968, 14, -131045, 917504, 14, -131028, 851968, 0, -196559, 851968, 1, -131023, 851968, 2, -196558, 917504, 1, -131022, 917504, 2, -393178, 589824, 11, -393177, 655360, 11, -393155, 851968, 10, -393154, 917504, 10, -393139, 720896, 11, -262078, 1310720, 9, -196542, 1310720, 10, -262077, 1376256, 9, -196541, 1376256, 10, -327629, 917504, 17, -262093, 917504, 18, -196557, 917504, 19, -327628, 983040, 17, -262092, 983040, 18, -196556, 983040, 19, -327627, 1048576, 17, -262091, 1048576, 18, -196555, 1048576, 19, -327626, 1114112, 17, -262090, 1114112, 18, -196554, 1114112, 19, -327625, 1179648, 17, -262089, 1179648, 18, -196553, 1179648, 19, -327624, 1245184, 17, -262088, 1245184, 18, -196552, 1245184, 19, -196551, 1572864, 9, -131015, 1572864, 10, -196548, 983040, 15, -131012, 983040, 16, -196547, 1048576, 15, -131011, 1048576, 16, -131013, 851968, 13, -131010, 458752, 2, -393143, 655360, 11, -393120, 589824, 11, -130976, 851968, 0, -131005, 393216, 6, -131004, 524288, 6, -393198, 655360, 11)

[node name="SpiderDrop2" parent="." instance=ExtResource("14_cilab")]
position = Vector2(541, -80)

[node name="SpiderDrop8" parent="." instance=ExtResource("14_cilab")]
position = Vector2(381, -80)

[node name="RratHole" parent="." instance=ExtResource("16_8w4y6")]
position = Vector2(512, -16)

[node name="GhostPath2" parent="." instance=ExtResource("17_ymy65")]
position = Vector2(912, -48)
path_width = 8

[node name="GlassSingle3" parent="." instance=ExtResource("18_05ipa")]
position = Vector2(928, -16)
tile = 2

[node name="SpiderDrop3" parent="." instance=ExtResource("14_cilab")]
position = Vector2(853, -80)

[node name="SpiderDrop4" parent="." instance=ExtResource("14_cilab")]
position = Vector2(687, -80)

[node name="Glass" parent="." instance=ExtResource("18_crul4")]
position = Vector2(657, -16)

[node name="SpiderDrop5" parent="." instance=ExtResource("14_cilab")]
position = Vector2(656, -80)

[node name="RratHole2" parent="." instance=ExtResource("16_8w4y6")]
position = Vector2(800, -16)

[node name="Glass2" parent="." instance=ExtResource("18_crul4")]
position = Vector2(1258, -16)

[node name="Glass3" parent="." instance=ExtResource("18_crul4")]
position = Vector2(1306, -16)

[node name="Glass4" parent="." instance=ExtResource("18_crul4")]
position = Vector2(1354, -16)

[node name="Glass5" parent="." instance=ExtResource("18_crul4")]
position = Vector2(1402, -16)

[node name="GhostPath3" parent="." instance=ExtResource("17_ymy65")]
position = Vector2(1242, -32)
path_width = 14

[node name="GhostPath4" parent="." instance=ExtResource("17_ymy65")]
position = Vector2(1338, -32)
path_width = 8

[node name="SpiderDrop7" parent="." instance=ExtResource("14_cilab")]
position = Vector2(1079, -80)

[node name="SpiderDrop6" parent="." instance=ExtResource("14_cilab")]
position = Vector2(1322, -80)

[node name="GlassSingle2" parent="." instance=ExtResource("18_05ipa")]
position = Vector2(348, -16)

[node name="GlassSingle" parent="." instance=ExtResource("18_05ipa")]
position = Vector2(404, -16)
tile = 3

[node name="Glass6" parent="." instance=ExtResource("18_crul4")]
position = Vector2(1008, -16)

[node name="GhostPath" parent="." instance=ExtResource("17_ymy65")]
position = Vector2(320, -32)
path_width = 8

[connection signal="door_opened" from="Apt51Door" to="." method="_on_apt_51_door_door_opened"]
[connection signal="door_opened" from="Apt52Door" to="." method="_on_apt_52_door_door_opened"]
[connection signal="door_opened" from="AreaDoorMaintenanceRoom" to="." method="_on_area_door_maintenance_room_door_opened"]
[connection signal="door_opened" from="AreaDoorFloorUp" to="." method="_on_area_door_floor_up_door_opened"]
[connection signal="door_opened" from="AreaDoorFloorDown" to="." method="_on_area_door_floor_down_door_opened"]
[connection signal="door_opened" from="AreaDoorServiceShaft" to="." method="_on_area_door_service_shaft_door_opened"]
[connection signal="window_opened" from="WindowFireEscape" to="." method="_on_window_fire_escape_window_opened"]
